--- a/ch1-sapflow/methods/methods.tex
+++ b/ch1-sapflow/methods/methods.tex
@@ -10,21 +10,19 @@ Climatic variables, including air temperature (\textit{T}, $^{\circ}$C), relativ
 
 Both shallow soil moisture and groundwater level are measured at Rivendell.  Depth profiles of $\theta$ (with a sensor placed every 5 to 10 cm down to a depth of 50 to 70 cm) are measured continuously with time domain reflectometer sensors (TDR; TDR100, Campbell Scientific) at six locations on the hillslope (Figure 1).  The TDR sensors are 7.5 cm long and are located in \textit{in situ} material: small trenches were dug in order to insert the probes horizontally into the soil or soil-like material in rock fractures, after which the trenches were backfilled with excavated material.  Measured dielectric values are converted to volumetric $\theta$ (m$^3$ water/m$^3$ total) using the standard Topp equation [\textit{Topp et al.}, 1980].  Groundwater level is monitored at 12 on-site wells.
 
-Volumetric $\theta$ measurements are filtered to exclude values outside the sensor's valid range and averaged over each day to reduce noise (no diurnal cycle is evident at this site, in contrast to other Douglas-fir sites [\textit{Brooks et al.}, 2006; \textit{Warren et al.}, 2007]).  The daily-average values are then averaged across all depths for each profile; each profile average is normalized by its maximum to convert to relative $\theta$ (\%); and the six profiles on the slope are then averaged to produce a site-averaged $\theta$ time series (Figure 2(d)).  The conversion to relative soil moisture is performed because no site-specific TDR calibration was performed.  We explain our reasoning for the site averaging in the Discussion, \textbf{Section XX}.
+Volumetric $\theta$ measurements are filtered to exclude values outside the sensor's valid range and averaged over each day to reduce noise (no diurnal cycle is evident at this site, in contrast to other Douglas-fir sites [\textit{Brooks et al.}, 2006; \textit{Warren et al.}, 2007]).  The daily-average values are then averaged across all depths for each profile; each profile average is normalized by its maximum to convert to relative $\theta$ (\%); and the six profiles on the slope are then averaged to produce a site-averaged $\theta$ time series.  The conversion to relative soil moisture is performed because no site-specific TDR calibration was performed.  We explain our reasoning for the site averaging in the Discussion, Section 4.5.1.
 
 \subsection{Sap flow measurement}
-Sap velocity, the velocity of water through the xylem parallel to the axis of the tree trunk, is measured in 26 trees using 39 heat ratio method sensors (ICT International, Armidale, Australia; \textit{Burgess et al.} [2001]) installed 1 m above the ground in the tree trunks.  The tree locations, species, and diameters at breast height are shown in Figure 1, with the symbol size scaled by tree diameter, and the properties of each sensor are listed in Table 1.  The trees were chosen to represent the distribution of tree species and sizes on the hillslope, within the constraints of accessibility on the steep slope and a limited number of sensors.  Multiple trees were instrumented for each species except tanoak (1 tree), which was sparse on this hillslope (uncharacteristically for this region.)  Before installing the sensors, bark was removed to the cambium from an approximately 5 cm x 5 cm area.  Each sensor measures the velocity of a heat pulse emitted by the sensor at two radial depths in the xylem: 12.5 mm and 27.5 mm.  These depths are not precise because of minor errors in sensor placement; errors in probe spacing are corrected using the procedure in \textit{Burgess et al.} [2001].  For this procedure, we assume zero flow at times when water stress is expected to be minimal: pre-dawn (within 3 hours before sunrise), high relative humidity (between 92 and 95\%), no solar radiation, no daily rain, and between January and March.  Sensors were moved in late 2010 to minimize wounding, creating two stages of deployment (2009-2010, and 2011.)  Because we did not measure wound diameters around the probes (as that would be destructive), we assume a wound diameter of 0.2 mm (a central value from Table 1 in \textit{Burgess et al.} [2001]) for all sensors; the wound correction is a linear factor and is thus removed by the normalization described below (Section 2.3).  Heat pulse velocity was recorded on ICT SL5 Smart Loggers (ICT International, Armidale, Australia) at 30 minute intervals.
+Sap velocity, the velocity of water through the xylem parallel to the axis of the tree trunk, is measured in 26 trees using 39 heat ratio method sensors (ICT International, Armidale, Australia; \textit{Burgess et al.} [2001]) installed 1 m above the ground in the tree trunks.  The tree locations, species, and diameters at breast height are shown in Figure 1, with the symbol size scaled by tree diameter, and the properties of each sensor are listed in Table 1.  The trees were chosen to represent the distribution of tree species and sizes on the hillslope, within the constraints of accessibility on the steep slope and a limited number of sensors.  Multiple trees were instrumented for each species except tanoak (1 tree), which was sparse on this hillslope (uncharacteristically for this region.)  Before installing the sensors, bark was removed to the cambium from an approximately 5 cm x 5 cm area.  Each sensor measures the velocity of a heat pulse emitted by the sensor at two radial depths in the xylem: 12.5 mm and 27.5 mm.  These depths are not precise because of minor errors in sensor placement; errors in probe spacing are corrected using the procedure in \textit{Burgess et al.} [2001].  For this procedure, we assume zero flow at times when water stress is expected to be minimal: pre-dawn (within 3 hours before sunrise), high relative humidity (between 92 and 95\%), no solar radiation, no daily rain, and between January and March.  Sensors were moved in late 2010 to minimize wounding, creating two stages of deployment (2009-2010, and 2011.)  Because we did not measure wound diameters around the probes (as that would be destructive), we assume a wound diameter of 0.2 mm (a central value from Table 1 in \textit{Burgess et al.} [2001]) for all sensors; the wound correction is a linear factor and is thus removed by the normalization described below (Section 2.3).  Heat pulse velocity was recorded on ICT SL5 Smart Loggers (ICT International, Armidale, Australia) at 30-minute intervals.
 
-Wood density and water content were measured by taking cores with an increment borer in October 2010 and October 2012, and these properties are used to convert heat pulse velocity to sap velocity [\textit{Burgess et al.}, 2001].  For several sensors, wood density and water content were not measured (Table 1); for these sensors, the species-averaged values were used.  Because water content was only measured once at the end of each stage, we used a constant value throughout the year.  Uncertainties associated with this assumption are discussed in \textbf{Section XX.}
+Wood density and water content were measured by taking cores with an increment borer in October 2010 and October 2012, and these properties are used to convert heat pulse velocity to sap velocity [\textit{Burgess et al.}, 2001].  For several sensors, wood density and water content were not measured (Table 1); for these sensors, the species-averaged values were used.  Because water content was only measured once at the end of each stage, we used a constant value throughout the year.  Uncertainties associated with this assumption are discussed in Section 4.5.2.
 
 For the following analyses, for each sensor, the depth with the larger magnitude of velocity (i.e. the most ``active" depth) is chosen.  Sap velocity is known to vary radially through the sapwood [\textit{Cohen et al.}, 1985; \textit{Cermak et al.}, 1992; \textit{Nadezhdina et al.}, 2002; \textit{Ford et al.}, 2004]; in our measurements, the velocities at 12.5 mm and 27.5 mm differed in magnitude but were highly correlated for almost all sensors ($R^2$ values listed in Table 1); as such, we include only one depth per sensor in order to avoid redundancy.
 
-Finally, we add the caveat that we treat sap velocity as proportional to transpiration.  We discuss this assumption in \textbf{Section XX}.
+Finally, we add the caveat that we treat sap velocity as proportional to transpiration.  We discuss this assumption in Section 4.5.2.
 
 \subsection{Normalization}
-For most of our analyses, we use normalized sap velocities.  Normalizing allows us to compare temporal dynamics and environmental responses between sensors with very different absolute magnitudes, and eliminates the time-invariant differences in absolute velocity due to azimuthal, radial, or between-tree variation in wood properties.  We employ normalization on two time scales.   The first normalizes instantaneous (30-minute frequency) measurements by dividing by the 99.5th percentile value of that sensor (to avoid normalizing by an outlier); this normalization is used for analyzing responses to environmental drivers (Sections 2.5 and 3.2).  In the second, daily integrals of sap velocity are normalized by dividing by the 99.5th percentile daily integral for each sensor; the normalized daily integrals are used for analyzing seasonal dynamics (Sections 2.4 and 3.1), since the diurnal cycle is removed.
-
-Sensors are normalized separately for each stage of deployment, because azimuthal variations in wood properties caused differences in absolute magnitude of velocity when sensors were moved within a tree.  The 99.5th percentile velocities for each sensor and each stage are listed in Table 1, and the timeseries of daily maximum normalized instantaneous velocity for each sensor are shown in Figure 3, separated by species (only the daily maximum is shown for visibility.)  For the following analyses, we constructed tree-averaged timeseries for trees with multiple sensors by averaging the normalized velocities at each measurement time for all sensors in a given tree.  This tree-averaging was performed because sensors within a tree covaried strongly for all trees (Table A1), and thus sensors in the same tree were not independent.
+For most of our analyses, we use normalized sap velocities.  Normalizing allows us to compare temporal dynamics and environmental responses between sensors with very different absolute magnitudes, and eliminates the time-invariant differences in absolute velocity due to azimuthal, radial, or between-tree variation in wood properties.  We employ normalization on two time scales.   The first normalizes instantaneous (30-minute frequency) measurements by dividing by the 99.5th percentile value of that sensor (to avoid normalizing by an outlier); this normalization is used for analyzing responses to environmental drivers (Sections 2.5 and 3.2).  In the second, daily integrals of sap velocity are normalized by dividing by the 99.5th percentile daily integral for each sensor; the normalized daily integrals are used for analyzing seasonal dynamics (Sections 2.4 and 3.1), since the diurnal cycle is removed.  Sensors are normalized separately for each stage of deployment, because azimuthal variations in wood properties caused differences in absolute magnitude of velocity when sensors were moved within a tree.
 
 \subsection{Principal Component Analysis}
 We use principal component analysis (PCA) to find the dominant spatial and, importantly, temporal sap flow patterns in the sap flow dataset, and to compare the dominant seasonality patterns between trees, across space and between species.  PCA, also known as empirical orthogonal function analysis [\textit{Lorenz}, 1956], reduces a dataset with many points in space and time to a few orthogonal patterns that explain most of the variance. These orthogonal patterns are determined empirically from the data, as the eigenvectors of the covariance matrix.  PCA yields a series of temporal functions (PCs), with a corresponding series station weighting factors (EOFs), which represent how strongly each time function (PC) contributes to the actual time series at a given station.  The pairs of time-space functions (PC$_m$ and EOF$_m$) are ordered by the fraction of the total dataset variance that each explains.
@@ -58,7 +56,6 @@ The functions of environmental modifiers are analytical parameterizations based 
 
 \begin{equation}  % equation 4
 f_{VPD}(VPD) = \frac{1}{1+VPD/D_o},
-\label{eqn:sapflow_fVPD}
 \end{equation}
 where $D_o$ (kPa) describes the sensitivity of $g_c$ to \textit{VPD}.
 
@@ -84,7 +81,7 @@ v_n & =  \frac{g_{cmax}}{\alpha} \cdot VPD \cdot f_{VPD}(VPD) \cdot f_{\theta}(\
 & =  \frac{g_{cmax}}{\alpha} \cdot \frac{VPD}{1+\frac{VPD}{D_o}} \cdot \frac{1}{1+\exp(-\beta(\theta-\theta_o))} \cdot (\gamma \cdot (I-1000)+1).
 \end{align}
 
-We estimate these five parameters for each sensor using a Markov chain Monte Carlo (MCMC) method, described in Appendix A.  The MCMC method allows us to quantify uncertainty in the parameters and avoid local minima traps on the complex $\chi ^2$ surface that might hinder optimization algorithms.  Each sap flow sensor is matched with the nearest weather station: the canopy weather station (TB) is used for the overstorey trees, while the nearest ground station (R1, R2, or R3) is used for the understorey canopy trees, including small Douglas-firs.  Incoming \textit{I} measured in the open meadow (station AM, Figure 1) is used for all sensors, because \textit{I} was only measured at station AM.  \textit{VPD}, \textit{I}, and $\theta$ were subsampled to the 30 minute frequency of sap flow measurements.  For each tree, sap velocity is lagged relative to \textit{I} and \textit{VPD} by a lag time determined by the maximum lag correlation for that tree's average timeseries, similar to the procedure in \textit{Dragoni et al.} [2009]; lag times are listed in Table 1.  The analysis is performed using times when \textit{I} was greater than zero (i.e., daytime observations) and \textit{VPD} was greater than 0.1 kPa.  Days with more than 2 mm of rain were excluded, because on those days leaves were probably covered with water and sap velocity thus was probably not controlled by stomatal response to the environment.  The site-averaged, daily-averaged $\theta$ is used for all sensors, as discussed in Section 2.1.  Parameters are also estimated for each species as a whole, using the average $v_n$ at each measurement from all sensors from a given species; these are referred to as the ``species-averaged timeseries" parameters.
+We estimate these five parameters for each sensor using a Markov chain Monte Carlo (MCMC) method, described in Appendix A.  The MCMC method allows us to quantify uncertainty in the parameters and avoid local minima traps on the complex $\chi ^2$ surface that might hinder optimization algorithms.  Each sap flow sensor is matched with the nearest weather station: the canopy weather station (TB) is used for the overstorey trees, while the nearest ground station (R1, R2, or R3) is used for the understorey canopy trees, including small Douglas-firs.  Incoming \textit{I} measured in the open meadow (station AM, Figure 1) is used for all sensors, because \textit{I} was only measured at station AM.  \textit{VPD}, \textit{I}, and $\theta$ were subsampled to the 30-minute frequency of sap flow measurements.  For each tree, sap velocity is lagged relative to \textit{I} and \textit{VPD} by a lag time determined by the maximum lag correlation for that tree's average timeseries, similar to the procedure in \textit{Dragoni et al.} [2009]; lag times are listed in Table 1.  The analysis is performed using times when \textit{I} was greater than zero (i.e., daytime observations) and \textit{VPD} was greater than 0.1 kPa.  Days with more than 2 mm of rain were excluded, because on those days leaves were probably covered with water and sap velocity thus was probably not controlled by stomatal response to the environment.  The site-averaged, daily-averaged $\theta$ is used for all sensors, as described in Section 2.1.  Parameters are also estimated for each species as a whole, using the average $v_n$ at each measurement from all sensors from a given species; these are referred to as the ``species-averaged timeseries" parameters.
 
 \subsection{Estimates of regional transpiration}
 We use the species-averaged timeseries of normalized sap velocity, along with Forest Inventory and Analysis (FIA) [\textit{Woudenberg et al.}, 2010] observations of tree size and species distributions in the Eel River watershed, to estimate the contribution of each species to regional transpiration.  We estimate regional transpiration, rather than hillslope transpiration at our particular site, because regional distributions of trees by species and diameter are available from the FIA inventory, but no species-diameter inventory has been conducted at our particular site.  This scale jump requires simplifications and assumptions (described below), and as such, our calculations are a rough best estimate and an attempt to bound the range of possible forest transpiration in this region from a bottom-up perspective.  
@@ -98,27 +95,35 @@ E_{tree} & = \int_{r_{inner}}^{r_{outer}} 2\pi r \, v(r) \, \mathrm{d}r \nonumbe
 \end{align}
 where $r$ is radial position on a cross-section of the tree, $r_{inner}$ is the radial position of the sapwood-heartwood boundary (meters), $r_{outer}$ is the radial position of the sapwood-bark boundary (meters, here treated as approximately equal to half the tree diameter at breast height, $d/2$), $v(r)$ is the sap velocity as a function of radial position in the sapwood (cm/hr), and $f_{prof}(r)$ is a linear function between 0 and 1 describing the radial profile of sap velocity relative to the velocity at the outer edge (described below).  In this equation, $v_n$ and $v_{max}$ can be pulled out of the integral, and the resulting term $2\pi \, v_{max} \, \int_{r_{inner}}^{r_{outer}}  r \, f_{prof}(r) \, \mathrm{d}r$ is equal to $\alpha$ in Equation 1.
 
-The thickness of the sapwood is estimated using a site-specific sapwood thickness--diameter relation, derived from 21 tree cores taken near Rivendell (15 Douglas-fir samples and 6 Pacific madrone samples; $R^2=0.88$):
-\begin{equation}
-w_{sap} = 0.12d+0.0063,
-\end{equation}
+The thickness of the sapwood is estimated using two site-specific sapwood thickness--diameter relations, derived from 21 tree cores taken near Rivendell (15 Douglas-fir samples ($R^2=0.88$) and 6 Pacific madrone samples ($R^2=0.83$)):
+\begin{align}
+w_{sap,Douglas-fir} = 0.12d+0.0089\\
+w_{sap,madrone} = 0.1d+0.0071 ,
+\end{align}
 and
 \begin{equation}
 r_{inner} = d/2-w_{sap},
 \end{equation}
-where $w_{sap}$ is sapwood thickness (m).  This relationship is roughly similar to the one found by \textit{Smith et al.} [1966] for Douglas-fir.  The sapwood-heartwood boundary was much easier to discern in Douglas-fir than in Pacific madrone, and no cores were taken in live oak, tanoak, or bay.  As a result, Equation 9 is probably more accurate for Douglas-fir than for the broadleaf species, but for lack of a better alternative, Equation 9 is used to estimate sapwood thickness for all species, because no sapwood-diameter relations could be found in the literature for the broadleaf species at our site.
+where $w_{sap}$ is sapwood thickness (m).  Our Douglas-fir relationship is roughly similar to the one found by \textit{Smith et al.} [1966] for Douglas-fir.  
+
+In addition, for other broadleaf species, we use the ring-porous equation from \textit{Wullschleger et al.} [2001]:
+\begin{equation}
+r_{inner,Wullschleger} = \sqrt{\left(\frac{d}{2}\right)^2-\frac{1.637d^{0.56}}{\pi}}.
+\end{equation}
+This equation is used for non-Pacific-madrone broadleaf species.
 
 Sap velocity was approximated as a linear function of radial position in the sapwood, based on observations that sap velocity is often lower in the inner sapwood than in the outer sapwood [\textit{Ford et al.}, 2004; \textit{Cohen et al.}, 1985; \textit{Cermak et al.}, 1992; \textit{Nadezhdina et al.}, 2002].  The velocity at the outer edge of the sapwood was estimated as the product of a time-invariant maximum velocity ($v_{max}$, cm/hr) and a time-varying normalized velocity ($v_n$, unitless), approximated as the species-averaged timeseries of measured normalized sap velocity.  $v_{max}$ values for each species were treated as independent of tree diameter and were approximated with the species-averaged maximum instantaneous velocities from Table 2.  Sap velocity is assumed to be independent of azimuth, or equivalently, we assume that $v_{max,sp}$ is an average of the maximum velocity around the bole of a tree.
 
 Because the radial profile of sap velocity is not well constrained with our measurements, we test three possible velocity profiles, with $v(r) = v_{max} \, v_n \, f_{prof}(r)$: (1) constant velocity across the sapwood ($f_{prof}(r) = 1$); (2) velocity decreasing linearly from $v_{max} \, v_n$ at the outer edge of the sapwood to $0.5 \, v_{max} \, v_n$ at the inner edge of the sapwood ($f_{prof}(r) = 1+\tfrac{0.5}{w_{sap}}(r-r_{outer})$ ); and (3) velocity decreasing linearly from $v_{max} \, v_n$ at the outer edge of the sapwood to 0 at the inner edge of the sapwood ($f_{prof}(r) = 1+\tfrac{1}{w_{sap}}(r-r_{outer})$ ).
 
-Transpiration is scaled from a single tree to the regional scale using distributions of tree species and sizes measured in the Eel River watershed by the FIA program, binned by diameter in 5 cm bins [\textit{Woudenberg et al.}, 2010] (locations of FIA plots are intentionally ``fuzzed and swapped'' for privacy reasons, but the provided coordinates are ``similar'' to the true coordinates with an unspecified offset).  The FIA surveyed 321 forested plots within the Eel Watershed.  Figure 4 shows $N_{i,sp}$, the number of trees per km$^2$ in each diameter bin ($i$) for major species categories in the watershed ($sp$), averaged over the 321 FIA plots.
+Transpiration is scaled from a single tree to the regional scale using distributions of tree species and sizes measured in the Eel River watershed by the FIA program, binned by diameter in 5 cm bins [\textit{Woudenberg et al.}, 2010] (locations of FIA plots are intentionally ``fuzzed and swapped'' for privacy reasons, but the provided coordinates are ``similar'' to the true coordinates with an unspecified offset).  The FIA surveyed 321 forested plots within the Eel Watershed.  Figure 2 shows $N_{i,sp}$, the number of trees per km$^2$ in each diameter bin ($i$) for major species categories in the watershed ($sp$), averaged over the 321 FIA plots.
 
 Regional transpiration due to each species (mm/d) is then estimated by summing individual tree transpiration of the species over all diameter bins ($i$):
 \begin{align}
 T_{sp} &= \sum_{i} N_{i,sp} \, E_{tree,i,sp} \nonumber \\
 &= 2\pi \, v_{max,sp} \, v_{n,sp} \, \sum_{i} N_{i,sp} \, \int_{r_{inner,i}}^{r_{outer,i}}  r \, f(r) \, \mathrm{d}r ,
 \end{align}
-and subsequently applying a unit conversion factor of $(10 \tfrac{mm}{cm}) (24 \tfrac{hr}{d}) (10^{-6} \tfrac{km^2}{m^2})$.  Total regional transpiration is estimated by summing transpiration estimated for all species, using the averaged time series of measured species to represent unmeasured but similar species.  All conifers, including redwoods, are assigned the Douglas-fir time series; all oaks, both evergreen and deciduous, are assigned the interior live oak time series; and all other unmeasured broadleaf trees are assigned the Pacific madrone time series, in order to give an upper-bound estimate on dry season transpiration.  Thus, we effectively bin species into categories of needleleaf evergreen and broadleaf evergreen; these assumptions are necessary because redwoods and major pine species were not measured due to their scarcity at our site.  In addition, we calculate regional transpiration in two extreme hypothetical cases, using the FIA total tree size distribution (black line in Figure 4): one case in which all trees are assigned the Douglas-fir time series, and another case in which all trees are assigned the Pacific madrone time series. 
+and subsequently applying a unit conversion factor of $(10 \tfrac{mm}{cm}) (24 \tfrac{hr}{day}) (10^{-6} \tfrac{km^2}{m^2})$.  Total regional transpiration is estimated by summing transpiration estimated for all species, using the averaged time series of measured species to represent unmeasured but similar species.  All conifers, including redwoods, are assigned the Douglas-fir time series; all oaks, both evergreen and deciduous, are assigned the interior live oak time series; and all other unmeasured broadleaf trees are assigned the Pacific madrone time series, in order to give an upper-bound estimate on dry season transpiration.  Thus, we effectively bin species into categories of needleleaf evergreen and broadleaf evergreen; these assumptions are necessary because redwoods and major pine species were not measured due to their scarcity at our site.  In addition, we calculate regional transpiration in two extreme hypothetical cases, using the FIA total tree size distribution (black line in Figure 2): one case in which all trees are assigned the Douglas-fir time series, and another case in which all trees are assigned the Pacific madrone time series. 
 
-The sap-flow-based regional transpiration estimates are compared with remotely-sensed MODIS-derived estimates of evapotranspiration (ET) [\textit{Mu et al.}, 2007.]  The MODIS algorithm uses remotely-sensed LAI and modeled stomatal response based on an assigned plant functional type (which for this region is evergreen needleleaf forest), combined with meteorology from atmospheric reanalysis, to estimate stomatal conductance and ET.  No soil moisture or subsurface information is explicitly included.  Two spatial scales of the MODIS-derived estimate are presented: the 1 km x 1 km pixel nearest to Rivendell (pixel centered about 450 m east of Rivendell), and the average for all pixels in the Eel River watershed.  Our goals in comparing our estimated to the MODIS-derived estimate are a) to confirm that our estimates are the right order of magnitude, and b) to compare the seasonal timing of transpiration between the methods.
+The sap-flow-based regional transpiration estimates are compared with remotely-sensed MODIS-derived estimates of ET [\textit{Mu et al.}, 2007.]  The MODIS algorithm uses remotely-sensed LAI and modeled stomatal response based on an assigned plant functional type (which for this region is evergreen needleleaf forest), combined with meteorology from atmospheric reanalysis, to estimate stomatal conductance and ET.  No soil moisture or subsurface information is explicitly included.  Two spatial scales of the MODIS-derived estimate are presented: the 1 km x 1 km pixel nearest to Rivendell (pixel centered about 450 m east of Rivendell), and the average for all pixels in the Eel River watershed.  Our goals in comparing our estimated to the MODIS-derived estimate are a) to confirm that our estimates are the right order of magnitude, and b) to compare the seasonal timing of transpiration between the methods.
+
