--- a/ch1-sapflow/results/results.tex
+++ b/ch1-sapflow/results/results.tex
@@ -1,9 +1,12 @@
 \section{Results}
 
 \subsection{Environmental conditions}
-The ACRR has a Mediterranean climate with a marked winter wet season and summer dry season.  The wet season at the ACRR extends from approximately October through April (90\% of the annual precipitation fell in these months in 2009-2011), and very little rain falls during July through September (less than 1\% in 2009-2011; Figure 2(a)).  Clear sky \textit{I} is maximum in late June (summer solstice) and minimum in late December (winter solstice), and \textit{I} can be reduced by 50 to 90\% on cloudy days.  The annual cycle of \textit{T} lags behind that of \textit{I}, with a peak in July and August and a minimum in January or February. The mean July-September \textit{T} for 2009-2011 was 18$^{\circ}$C, and the mean December-February \textit{T} was 5$^{\circ}$C (weather station R3).  The annual cycle of \textit{VPD} follows that of \textit{T} and also peaks in July or August.  \textit{T} and \textit{RH} vary somewhat along the hillslope: on clear days, the air is warmer and drier in the upper canopy and upslope, and the air is cooler and more humid downslope (up to 10$^{\circ}$C cooler at downslope ground level than in the canopy at midday in winter; Figure 2(b) and (c)).  Mean annual \textit{P} in the vicinity of the ACRR (National Climatic Data Center GHCN precipitation station USC00048490, 18 km NNE of the ACRR; data from 1960-2000; \textit{Williams et al.} [2012]) is 1800 mm, with significant interannual variability (standard deviation of 500 mm); on average, 3\% ($\pm$3\% standard deviation) of annual precipitation falls in July through September.  During the study period, precipitation at Rivendell ranged between a minimum of 1500 mm in water year 2008-2009 and a maximum of 2100 mm in water year 2010-2011.
+The ACRR has a Mediterranean climate with a marked winter wet season and summer dry season.  The wet season at the ACRR extends from approximately October through April (90\% of the annual precipitation fell in these months in 2009-2011), and very little rain falls during July through September (less than 1\% in 2009-2011; Figure 3(a)).  Clear sky \textit{I} is maximum in late June (summer solstice) and minimum in late December (winter solstice), and \textit{I} can be reduced by 50 to 90\% on cloudy days.  The annual cycle of \textit{T} lags behind that of \textit{I}, with a peak in July and August and a minimum in January or February. The mean July-September \textit{T} for 2009-2011 was 18$^{\circ}$C, and the mean December-February \textit{T} was 5$^{\circ}$C (weather station R3).  The annual cycle of \textit{VPD} follows that of \textit{T} and also peaks in July or August.  \textit{T} and \textit{RH} vary somewhat along the hillslope: on clear days, the air is warmer and drier in the upper canopy and upslope, and the air is cooler and more humid downslope (up to 10$^{\circ}$C cooler at downslope ground level than in the canopy at midday in winter; Figure 3(b) and (c)).  Mean annual \textit{P} in the vicinity of the ACRR (National Climatic Data Center GHCN precipitation station USC00048490, 18 km NNE of the ACRR; data from 1960-2000; \textit{Williams et al.} [2012]) is 1800 mm, with significant interannual variability (standard deviation of 500 mm); on average, 3\% ($\pm$3\% standard deviation) of annual precipitation falls in July through September.  During the study period, precipitation at Rivendell ranged between a minimum of 1500 mm in water year 2008-2009 and a maximum of 2100 mm in water year 2010-2011.
 
-Water storage below ground is also highly seasonal. The water table, measured by 12 on-site wells, remains near 5 m below ground throughout the year at downslope wells, but upslope it ranges from $\sim$10 m below ground in the wet season to $\sim$20 m below ground in the dry season.   Soil moisture ($\theta$) is high and dynamic during the winter rainy season but dries to fairly steady and very low values during the summer dry season (Figure 2(d); \textit{Salve et al.} [2012]).  
+Water storage below ground is also highly seasonal. The water table, measured by 12 on-site wells, remains near 5 m below ground throughout the year at downslope wells, but upslope it ranges from $\sim$10 m below ground in the wet season to $\sim$20 m below ground in the dry season.   Soil moisture ($\theta$) is high and dynamic during the winter rainy season but dries to fairly steady and very low values during the summer dry season (Figure 3(d); \textit{Salve et al.} [2012]).  
+
+\subsection{Sap velocities}
+The 99.5th percentile velocities for each sensor and each stage are listed in Table 1, and the timeseries of daily maximum normalized instantaneous velocity for each sensor are shown in Figure 4, separated by species (only the daily maximum is shown for visibility.)  For the following analyses, we constructed tree-averaged timeseries for trees with multiple sensors by averaging the normalized velocities at each measurement time for all sensors in a given tree.  This tree-averaging was performed because sensors within a tree covaried strongly for all trees (Table A1), and thus sensors in the same tree were not independent.
 
 \subsection{Seasonal patterns: Principal Component Analysis}
 The time pattern that explains the most variance among all sap flow sensors, PC1, represents the common annual cycle, with a peak in early July and lower values through the winter, mirroring the annual cycle of solar radiation (Figure 5, left column in each stage).  PC1 also contains the abrupt drops in sap flow on rainy days in winter and spring, when almost all sensors have very low sap velocity.  The annual cycle pattern is evident in PC1 for both stages, and PC1 explains 84\% of the variance in stage 1 (2009-2010) and 87\% of the variance in stage 2 (2011).  All sensors in both stages have positive weighting factors for PC1, meaning that all sensors display a component of this annual cycle pattern.  In stage 1, downslope trees tend to resemble PC1 more strongly than do upslope trees (i.e., have larger positive weighting factors).
@@ -50,5 +53,6 @@ Our bottom-up estimates of regional transpiration, estimated with the aid of the
 
 The three radial sap velocity profiles tested give transpiration estimates that vary by approximately a factor of two.  The upper end of the range is similar in magnitude to the average of MODIS-derived ET for pixels in the Eel watershed (cyan in Figure 10, right column.)  The sap-flow-based estimates are smaller than the MODIS-derived estimate of ET for the pixel nearest the Rivendell site (purple in Figure 10, right column) by a factor of 2 to 3.
 
-With the realistic species distribution, we estimate lower dry season (August-September) transpiration relative to peak (June-July) transpiration than does MODIS.  Figure 11 shows August plus September transpiration divided by June plus July transpiration for MODIS-derived ET from 2000 to 2010, and for our estimates from 2009 to 2011.  In our estimates, the ratio of dry season transpiration to peak transpiration is the same regardless of radial sap velocity profile (the integral factor in Equation 11 cancels), so only one sap-flow-based estimate is shown in Figure 11.  The MODIS ratio of dry season transpiration to peak transpiration is close to 0.8 for the Eel watershed average and close to 1 for the near-Rivendell pixel for all years and is markedly higher than the sap-flow-based ratio, which is close to 0.5 in all three years.
+With the realistic species distribution, we estimate lower dry season (August-September) transpiration relative to peak (June-July) transpiration than does MODIS.  Figure 11 shows August plus September transpiration divided by June plus July transpiration for MODIS-derived ET from 2000 to 2010, and for our estimates from 2009 to 2011.  In our estimates, the ratio of dry season transpiration to peak transpiration is the same regardless of radial sap velocity profile (the integral factor in Equation 13 cancels), so only one sap-flow-based estimate is shown in Figure 11.  The MODIS ratio of dry season transpiration to peak transpiration is close to 0.8 for the Eel watershed average and close to 1 for the near-Rivendell pixel for all years and is markedly higher than the sap-flow-based ratio, which is close to 0.5 in all three years.
+
 
