--- a/thesis.bib
+++ b/thesis.bib
@@ -1,3 +1,672 @@
+%%%%%%%% SAP FLOW CHAPTER %%%%%%%%
+@article{ackerly2004functional,
+	Author = {Ackerly, D.},
+	Journal = {Ecological Monographs},
+	Number = {1},
+	Pages = {25--44},
+	Publisher = {Eco Soc America},
+	Title = {Functional strategies of chaparral shrubs in relation to seasonal water deficit and disturbance},
+	Volume = {74},
+	Year = {2004}}
+
+@article{aranda2000water,
+	Author = {Aranda, Ismael and Gil, Luis and Pardos, Jose Alberto},
+	Journal = {Trees},
+	Number = {6},
+	Pages = {344--352},
+	Publisher = {Springer},
+	Title = {Water relations and gas exchange in \textit{Fagus sylvatica} L. and \textit{Quercus petraea} (Mattuschka) Liebl. in a mixed stand at their southern limit of distribution in {Europe}},
+	Volume = {14},
+	Year = {2000}}
+
+@article{baldocchi2011synthesis,
+	Author = {Baldocchi, D.D. and Ryu, Y.},
+	Journal = {Forest Hydrology and Biogeochemistry},
+	Pages = {101--116},
+	Publisher = {Springer},
+	Title = {A Synthesis of Forest Evaporation Fluxes--from Days to Years--as Measured with Eddy Covariance},
+	Year = {2011}}
+
+@article{baldocchi2007limits,
+	Author = {Baldocchi, D.D. and Xu, L.},
+	Journal = {Advances in Water Resources},
+	Number = {10},
+	Pages = {2113--2122},
+	Publisher = {Elsevier},
+	Read = {1},
+	Title = {What limits evaporation from {Mediterranean} oak woodlands-The supply of moisture in the soil, physiological control by plants or the demand by the atmosphere?},
+	Volume = {30},
+	Year = {2007}}
+
+@article{baquedano2006comparative,
+	Author = {Baquedano, FJ and Castillo, FJ},
+	Journal = {Trees},
+	Number = {6},
+	Pages = {689--700},
+	Publisher = {Springer},
+	Title = {Comparative ecophysiological effects of drought on seedlings of the {Mediterranean} water-saver \textit{Pinus halepensis} and water-spenders \textit{Quercus coccifera} and \textit{Quercus ilex}},
+	Volume = {20},
+	Year = {2006}}
+
+@article{black1979evapotranspiration,
+	Author = {Black, T.A.},
+	Journal = {Water Resources Research},
+	Publisher = {American Geophysical Union},
+	Title = {Evapotranspiration from {Douglas} fir stands exposed to soil water deficits},
+	Year = {1979}}
+
+
+@book{bonan,
+	Author={Bonan, G. B.},
+	Title={Ecological climatology: concepts and applications},
+	Publisher={Cambridge University Press},
+	Year={2002}}
+
+
+@article{bond1999stomatal,
+	Author = {Bond, Barbara J and Kavanagh, Kathleen L},
+	Journal = {Tree Physiology},
+	Number = {8},
+	Pages = {503--510},
+	Publisher = {Oxford University Press},
+	Title = {Stomatal behavior of four woody species in relation to leaf-specific hydraulic conductance and threshold water potential},
+	Volume = {19},
+	Year = {1999}}
+
+
+@article{Brooks:2006vn},
+	Author = {Brooks, JR and Meinzer, FC and Warren, JM and Domec, JC and Coulombe, R},
+	Journal = {Plant Cell and Environment},
+	Number = {1},
+	Pages = {138--150},
+	Publisher = {BLACKWELL PUBLISHING},
+	Title = {Hydraulic redistribution in a {Douglas-fir} forest: lessons from system manipulations},
+	Volume = {29},
+	Year = {2006}}
+
+
+@article{buckley2011nocturnal,
+	Author = {Buckley, T.N. and Turnbull, T.L. and Pfautsch, S. and Adams, M.A.},
+	Journal = {Ecology and Evolution},
+	Publisher = {Wiley Online Library},
+	Title = {Nocturnal water loss in mature subalpine \textit{Eucalyptus delegatensis} tall open forests and adjacent \textit{E. pauciflora} woodlands},
+	Year = {2011}}
+
+
+@article{burgess2001improved,
+	Author = {Burgess, S.S.O. and Adams, M.A. and Turner, N.C. and Beverly, C.R. and Ong, C.K. and Khan, A.A.H. and Bleby, T.M.},
+	Journal = {Tree Physiology},
+	Number = {9},
+	Pages = {589},
+	Publisher = {Oxford University Press},
+	Title = {An improved heat pulse method to measure low and reverse rates of sap flow in woody plants},
+	Volume = {21},
+	Year = {2001}}
+
+
+@article{vcermak1992radial,
+	Author = {{\v{C}}erm{\'a}k, J. and Cienciala, E. and Ku{\v{c}}era, J. and H{\"a}llgren, J.E.},
+	Journal = {Tree Physiology},
+	Number = {4},
+	Pages = {367--380},
+	Publisher = {Oxford University Press},
+	Title = {Radial velocity profiles of water flow in trunks of {Norway} spruce and oak and the response of spruce to severing},
+	Volume = {10},
+	Year = {1992}}
+
+
+@article{chen2008observations,
+	Author = {Chen, Xingyuan and Rubin, Yoram and Ma, Siyan and Baldocchi, Dennis},
+	Journal = {Water Resources Research},
+	Number = {8},
+	Publisher = {Wiley Online Library},
+	Title = {Observations and stochastic modeling of soil moisture control on evapotranspiration in a {Californian} oak savanna},
+	Volume = {44},
+	Year = {2008}}
+
+
+@article{chirino2011daily,
+	Author = {Chirino, Esteban and Bellot, Juan and S{\'a}nchez, Juan R},
+	Journal = {Trees},
+	Number = {4},
+	Pages = {593--606},
+	Publisher = {Springer},
+	Title = {Daily sap flow rate as an indicator of drought avoidance mechanisms in five {Mediterranean} perennial species in semi-arid southeastern Spain},
+	Volume = {25},
+	Year = {2011}}
+
+
+@article{choat2012global,
+	Author = {Choat, B., S. Jansen, T.~J. Bodribb, H. Cochard, S. Delzon, R. Bhaskar, S. Bucci, T.~S. Feild, S.~M. Gleason, U.~G. Hacke, A.~L. Jacobsen, F. Lens, H. Maherali, J. Mart\'{i}nez-Vilalta, S. Mayr, M. Mencuccini, P.~J. Mitchell, A. Nardini, J. Pittermann, R.~B. Pratt, J.~S. Sperry, M. Westoby, I.~J. Wright, and A.~E. Zanne},
+	Journal = {Nature},
+	Publisher = {Nature Publishing Group},
+	Volume = {491},
+	Pages = {752--756},
+	Title = {Global convergence in the vulnerability of forests to drought},
+	Year = {2012}}
+
+
+@article{cohen1985determination,
+	Author = {Cohen, Y. and Kelliher, FM and Black, TA},
+	Journal = {Canadian Journal of Forest Research},
+	Number = {2},
+	Pages = {422--428},
+	Publisher = {National Research Council of Canada},
+	Title = {Determination of sap flow in {Douglas-fir} trees using the heat pulse technique},
+	Volume = {15},
+	Year = {1985}}
+
+
+@article{constanz,
+	Author={Constantz, J., and Murphy, F.},
+	Journal={Journal of Hydrology},
+	Volume={119},
+	Number={1},
+	Title={Monitoring moisture storage in trees using time domain reflectometry},
+	Pages={31--42},
+	Year={1990}}
+
+
+@article{dang1997regulation,
+	Author = {Dang, Q.L. and Margolis, H.A. and Coyea, M.R. and Sy, M. and Collatz, G.J.},
+	Journal = {Tree Physiology},
+	Number = {8-9},
+	Pages = {521--535},
+	Publisher = {Oxford University Press},
+	Title = {Regulation of branch-level gas exchange of boreal trees: roles of shoot water potential and vapor pressure difference},
+	Volume = {17},
+	Year = {1997}}
+
+
+@article{david2007water,
+	Author = {David, Teresa Soares and Henriques, MO and Kurz-Besson, C and Nunes, J and Valente, F and Vaz, M and Pereira, JS and Siegwolf, R and Chaves, MM and Gazarini, LC and others},
+	Journal = {Tree Physiology},
+	Number = {6},
+	Pages = {793--803},
+	Publisher = {Oxford University Press},
+	Title = {Water-use strategies in two co-occurring {Mediterranean} evergreen oaks: surviving the summer drought},
+	Volume = {27},
+	Year = {2007}}
+
+
+@article{dragoni2009decoupling,
+	Author = {Dragoni, D and Caylor, KK and Schmid, HP},
+	Journal = {Agricultural and Forest Meteorology},
+	Number = {3},
+	Pages = {570--581},
+	Publisher = {Elsevier},
+	Title = {Decoupling structural and environmental determinants of sap velocity: {Part II}. Observational application},
+	Volume = {149},
+	Year = {2009}}
+
+
+@book{eamus,
+	Author={Eamus, D. and Hatton, T and Cook, P and Colvin, C},
+	Title={Ecohydrology: Vegetation Function, Water and Resource Mangement},
+	Publisher={CSIRO Publishing},
+	Year={2006}}
+
+
+@book{feddes,
+	Author={Feddes, R. and Kowalik, P. and Zaradny, H.},
+	Title={Simulation of Field Water Use and Crop Yield},
+	Publisher={John Wiley, New York},
+	Year={1978}}
+
+
+@article{ford2004assessing,
+	Author = {Ford, C.R. and McGuire, M.A. and Mitchell, R.J. and Teskey, R.O.},
+	Journal = {Tree Physiology},
+	Number = {3},
+	Pages = {241--249},
+	Publisher = {Oxford University Press},
+	Title = {Assessing variation in the radial profile of sap flux density in {Pinus} species and its effect on daily water use},
+	Volume = {24},
+	Year = {2004}}
+
+
+@article{franks2007anisohydric,
+	Author = {Franks, Peter J and Drake, Paul L and Froend, Ray H},
+	Journal = {Plant, Cell \& Environment},
+	Number = {1},
+	Pages = {19--30},
+	Publisher = {Wiley Online Library},
+	Title = {Anisohydric but isohydrodynamic: seasonally constant plant water potential gradient explained by a stomatal control mechanism incorporating variable plant hydraulic conductance},
+	Volume = {30},
+	Year = {2007}}
+
+\bibitem[{GLOBE}]{GLOBE}
+GLOBE Task Team and others (Hastings, D.~A., P.~K. Dunbar, G.~M. Elphingstone, M. Bootz, H. Murakami, H. Maruyama, H. Masaharu, P. Holland, J. Payne, N.~A. Bryant, T.~L. Logan, J.-P. Muller, G. Schreier, and J.~S. MacDonald), eds. (1999), The Global Land One-kilometer Base Elevation (GLOBE) Digital Elevation Model, Version 1.0. National Oceanic and Atmospheric Administration, National Geophysical Data Center, 325 Broadway, Boulder, Colorado 80303, U.S.A. Digital data base on the World Wide Web (URL: http://www.ngdc.noaa.gov/mgg/topo/globe.html) and CD-ROMs.
+
+
+@article{granier1987evaluation,
+	Author = {Granier, A.},
+	Journal = {Tree Physiology},
+	Number = {4},
+	Pages = {309--320},
+	Publisher = {Oxford University Press},
+	Title = {Evaluation of transpiration in a {Douglas-fir} stand by means of sap flow measurements},
+	Volume = {3},
+	Year = {1987}}
+
+
+@article{humphreys2003annual,
+	Author = {Humphreys, ER and Black, TA and Ethier, GJ and Drewitt, GB and Spittlehouse, DL and Jork, E.M. and Nesic, Z. and Livingston, NJ},
+	Journal = {Agricultural and Forest Meteorology},
+	Number = {1-2},
+	Pages = {109--125},
+	Publisher = {Elsevier},
+	Title = {Annual and seasonal variability of sensible and latent heat fluxes above a coastal {Douglas-fir forest, British Columbia, Canada}},
+	Volume = {115},
+	Year = {2003}}
+
+
+@article{jarvis1976interpretation,
+	Author = {Jarvis, PG},
+	Journal = {Philosophical Transactions of the Royal Society of London. B, Biological Sciences},
+	Number = {927},
+	Pages = {593--610},
+	Publisher = {The Royal Society},
+	Title = {The interpretation of the variations in leaf water potential and stomatal conductance found in canopies in the field},
+	Volume = {273},
+	Year = {1976}}
+
+
+@article{jassal2009evapotranspiration,
+	Author = {Jassal, R.S. and Black, T.A. and Spittlehouse, D.L. and Br{\"u}mmer, C. and Nesic, Z.},
+	Journal = {Agricultural and Forest Meteorology},
+	Number = {6-7},
+	Pages = {1168--1178},
+	Publisher = {Elsevier},
+	Title = {Evapotranspiration and water use efficiency in different-aged {Pacific Northwest Douglas-fir} stands},
+	Volume = {149},
+	Year = {2009}}
+
+
+@mastersthesis{johnsonACRR,
+	Author = {Johnson, Sharon Grace},
+	School = {San Francisco State University},
+	Title = {The land-use history of the coast range preserve, {Mendocino County, California}},
+	Year = {1979}}
+
+
+@article{jung2010recent,
+	Author = {Jung, M. and Reichstein, M. and Ciais, P. and Seneviratne, S.I. and Sheffield, J. and Goulden, M.L. and Bonan, G. and Cescatti, A. and Chen, J. and De Jeu, R. and others},
+	Journal = {Nature},
+	Number = {7318},
+	Pages = {951--954},
+	Publisher = {Nature Publishing Group},
+	Title = {Recent decline in the global land evapotranspiration trend due to limited moisture supply},
+	Volume = {467},
+	Year = {2010}}
+
+
+@article{kumagai2012strategies,
+	Author = {Kumagai, Tomo'omi and Porporato, Amilcare},
+	Journal = {Plant, Cell \& Environment},
+	Number = {1},
+	Pages = {61--71},
+	Publisher = {Wiley Online Library},
+	Title = {Strategies of a {Bornean} tropical rainforest water use as a function of rainfall regime: isohydric or anisohydric?},
+	Volume = {35},
+	Year = {2012}}
+
+
+@article{lindroth1986numerical,
+	Author = {Lindroth, A. and Halldin, S.},
+	Journal = {Agricultural and forest meteorology},
+	Number = {1-3},
+	Pages = {59--79},
+	Publisher = {Elsevier},
+	Title = {Numerical analysis of pine forest evaporation and surface resistance},
+	Volume = {38},
+	Year = {1986}}
+
+
+@article{lohammar1980fast,
+	Author = {Lohammar, T. and Larsson, S. and Linder, S. and Falk, SO},
+	Journal = {Ecological Bulletins},
+	Pages = {505--523},
+	Publisher = {JSTOR},
+	Title = {{FAST}: Simulation models of gaseous exchange in {Scots} pine},
+	Year = {1980}}
+
+
+@article{lorenz1956empirical,
+	Author = {Lorenz, E.N. and Air Force Cambridge Research Center (US) Geophysics Research Directorate},
+	Publisher = {Massachusetts Institute of Technology, Dept. of Meteorology},
+	Title = {Empirical orthogonal functions and statistical weather prediction},
+	Year = {1956}}
+
+
+@article{marshall1984conifers,
+	Author = {Marshall, JD and Waring, RH},
+	Journal = {Canadian Journal of Forest Research},
+	Number = {6},
+	Pages = {905--908},
+	Publisher = {NRC Research Press},
+	Title = {Conifers and broadleaf species: stomatal sensitivity differs in western {Oregon}},
+	Volume = {14},
+	Year = {1984}}
+
+
+@article{martinez2003sap,
+	Author = {Mart{\'\i}nez-Vilalta, Jordi and Mangir{\'o}n, Marta and Ogaya, Rom{\`a} and Sauret, Miquel and Serrano, Lydia and Pe{\~n}uelas, Josep and Pi{\~n}ol, Josep},
+	Journal = {Tree Physiology},
+	Number = {11},
+	Pages = {747--758},
+	Publisher = {Oxford University Press},
+	Title = {Sap flow of three co-occurring {Mediterranean} woody species under varying atmospheric and soil water conditions},
+	Volume = {23},
+	Year = {2003}}
+
+
+@article{martinez2004hydraulic,
+	Author = {Mart{\'\i}nez-Vilalta, Jordi and Sala, Anna and Pi{\~n}ol, Josep},
+	Journal = {Plant Ecology},
+	Number = {1-2},
+	Pages = {3--13},
+	Publisher = {Springer},
+	Title = {The hydraulic architecture of \textit{Pinaceae}--a review},
+	Volume = {171},
+	Year = {2004}}
+
+
+@article{mcdowell2008mechanisms,
+	Author = {McDowell, N. and Pockman, W.T. and Allen, C.D. and Breshears, D.D. and Cobb, N. and Kolb, T. and Plaut, J. and Sperry, J. and West, A. and Williams, D.G. and others},
+	Journal = {New Phytologist},
+	Number = {4},
+	Pages = {719--739},
+	Publisher = {Wiley Online Library},
+	Title = {Mechanisms of plant survival and mortality during drought: why do some plants survive while others succumb to drought?},
+	Volume = {178},
+	Year = {2008}}
+
+
+@article{moore2004structural,
+	Author = {Moore, G.W. and Bond, B.J. and Jones, J.A. and Phillips, N. and Meinzer, F.C.},
+	Journal = {Tree Physiology},
+	Number = {5},
+	Pages = {481},
+	Publisher = {Oxford University Press},
+	Title = {Structural and compositional controls on transpiration in 40-and 450-year-old riparian forests in western {Oregon, USA}},
+	Volume = {24},
+	Year = {2004}}
+
+
+@article{morrow1974drought,
+	Author = {Morrow, PA and Mooney, H.A.},
+	Journal = {Oecologia},
+	Number = {3},
+	Pages = {205--222},
+	Publisher = {Springer},
+	Title = {Drought adaptations in two {Californian} evergreen sclerophylls},
+	Volume = {15},
+	Year = {1974}}
+
+
+@article{mu2007development,
+	Author = {Mu, Qiaozhen and Heinsch, Faith Ann and Zhao, Maosheng and Running, Steven W},
+	Journal = {Remote Sensing of Environment},
+	Number = {4},
+	Pages = {519--536},
+	Publisher = {Elsevier},
+	Title = {Development of a global evapotranspiration algorithm based on {MODIS} and global meteorology data},
+	Volume = {111},
+	Year = {2007}}
+
+
+@article{nadezhdina2002radial,
+	Author = {Nadezhdina, N. and {\v{C}}erm{\'a}k, J. and Ceulemans, R.},
+	Journal = {Tree Physiology},
+	Number = {13},
+	Pages = {907--918},
+	Publisher = {Oxford University Press},
+	Title = {Radial patterns of sap flow in woody stems of dominant and understory species: scaling errors associated with positioning of sensors},
+	Volume = {22},
+	Year = {2002}}
+
+
+@article{oleson2010technical,
+	Author = {Oleson, KW and Lawrence, DM and Bonan, GB and Flanner, MG and Kluzek, E. and Lawrence, PJ and Levis, S. and Swenson, SC and Thornton, PE and Dai, A. and others},
+	Journal = {National Center for Atmospheric Research, Boulder, CO},
+	Title = {Technical description of version 4.0 of the {Community Land Model (CLM). NCAR Technical Note NCAR/TN-478+ STR}},
+	Year = {2010}}
+
+
+@article{oren1999survey,
+	Author = {Oren, R. and Sperry, JS and Katul, GG and Pataki, DE and Ewers, BE and Phillips, N. and Sch{\"a}fer, KVR},
+	Journal = {Plant, Cell \& Environment},
+	Number = {12},
+	Pages = {1515--1526},
+	Publisher = {Wiley Online Library},
+	Title = {Survey and synthesis of intra-and interspecific variation in stomatal sensitivity to vapour pressure deficit},
+	Volume = {22},
+	Year = {1999}}
+
+\bibitem[{\textit{Oshun}(2012)}]{Oshun}
+Oshun, J., D. Rempe, P. Link, K.~A. Simonin, W.~E. Dietrich, T.~E. Dawson, and I. Fung (2012), A look deep inside a hillslope reveals a structured heterogeneity of isotopic reservoirs and distinct water use strategies for adjacent trees, \textit{AGU Fall Meeting Abstracts}, San Francisco, CA.
+
+
+@article{pataki2000sap,
+	Author = {Pataki, D.E. and Oren, R. and Smith, W.K.},
+	Journal = {Ecology},
+	Number = {9},
+	Pages = {2557--2566},
+	Publisher = {Eco Soc America},
+	Title = {Sap flux of co-occurring species in a western subalpine forest during seasonal soil drought},
+	Volume = {81},
+	Year = {2000}}
+
+\bibitem[{\textit{Patil et~al.}(2010)}]{Patil}
+Patil, A., D. Huard, and C.~J. Fonnesbeck (2010), PyMC: Bayesian stochastic modelling in python,
+\textit{J. Stat. Software}, \textit{35}(4), 1--81.
+
+\bibitem[{Raftery}]{Raftery}
+Raftery, A.~E., and S.~M. Lewis (1995), The number of iterations, convergence diagnostics, and generic metropolis algorithms, in \textit{Practical Markov Chain Monte Carlo}, W.~R. Gilks, D.~J. Spiegelhalter, and S. Richardson, eds.
+
+\bibitem[{\textit{Rempe et~al.}(2010)}]{Rempe}
+Rempe, D., J. Oshun, W. Dietrich, R. Salve, and I. Fung (2010), Controls on the weathering front
+depth on hillslopes underlain by mudstones and sandstones, \textit{AGU Fall Meeting Abstracts}, \textit{1},
+05.
+
+
+@article{rodriguez2001intensive,
+	Author = {Rodriguez-Iturbe, I. and Porporato, A. and Laio, F. and Ridolfi, L.},
+	Journal = {Geophysical research letters},
+	Number = {23},
+	Pages = {4495--4497},
+	Title = {Intensive or extensive use of soil moisture: plant strategies to cope with stochastic water availability},
+	Volume = {28},
+	Year = {2001}}
+
+
+@article{running1976environmental,
+	Author = {Running, S.W.},
+	Journal = {Canadian Journal of Forest Research},
+	Number = {1},
+	Pages = {104--112},
+	Publisher = {NRC Research Press},
+	Title = {Environmental control of leaf water conductance in conifers},
+	Volume = {6},
+	Year = {1976}}
+
+
+@article{salve2012rain,
+	Author = {Salve, R. and Rempe, D.M. and Dietrich, W.E.},
+	Journal = {Water Resources Research},
+	Number = {11},
+	Pages = {W11528},
+	Publisher = {American Geophysical Union},
+	Title = {Rain, rock moisture dynamics, and the rapid response of perched groundwater in weathered, fractured argillite underlying a steep hillslope},
+	Volume = {48},
+	Year = {2012}}
+
+
+\bibitem[{\textit{Schulze}(1985)}]{Schulze}
+Schulze, E. D., \v{C}erm\'{a}k, J., Matyssek, M., Penka, M., Zimmermann, R., Vasicek, F., Gries, W., and Ku\v{c}era, J. (1985), Canopy transpiration and water fluxes in the xylem of the trunk of Larix and Picea trees?a comparison of xylem flow, porometer and cuvette measurements, \textit{Oecologia}, \textit{66}(4), 475-483.
+
+
+@article{schwinning2010ecohydrology,
+	Author = {Schwinning, Susanne},
+	Journal = {Ecohydrology},
+	Number = {2},
+	Pages = {238--245},
+	Publisher = {Wiley Online Library},
+	Title = {The ecohydrology of roots in rocks},
+	Volume = {3},
+	Year = {2010}}
+
+
+@article{schwinning2013we,
+	Author = {Schwinning, Susanne},
+	Journal = {Plant and Soil},
+	Number = {1-2},
+	Pages = {25--31},
+	Publisher = {Springer},
+	Title = {Do we need new rhizosphere models for rock-dominated landscapes?},
+	Volume = {362},
+	Year = {2013}}
+
+
+@article{smith1966variation,
+	Author = {Smith, JHG and Walters, J. and Wellwood, RW},
+	Journal = {Forest Science},
+	Pages = {97--103},
+	Publisher = {Society of American Foresters},
+	Title = {Variation in sapwood thickness of {Douglas-fir} in relation to tree and section characteristics},
+	Volume = {12},
+	Year = {1966}}
+
+
+@article{tan1976factors,
+	Author = {Tan, CS and Black, TA},
+	Journal = {Boundary-Layer Meteorology},
+	Number = {4},
+	Pages = {475--488},
+	Publisher = {Springer},
+	Title = {Factors affecting the canopy resistance of a Douglas-fir forest},
+	Volume = {10},
+	Year = {1976}}
+
+
+@article{teuling2010contrasting,
+	Author = {Teuling, A.J. and Seneviratne, S.I. and St{\"o}ckli, R. and Reichstein, M. and Moors, E. and Ciais, P. and Luyssaert, S. and Van Den Hurk, B. and Ammann, C. and Bernhofer, C. and others},
+	Journal = {Nature geoscience},
+	Number = {10},
+	Pages = {722--727},
+	Publisher = {Nature Publishing Group},
+	Title = {Contrasting response of {European} forest and grassland energy exchange to heatwaves},
+	Volume = {3},
+	Year = {2010}}
+
+
+@article{topp1980electromagnetic,
+	Author = {Topp, GC and Davis, JL and Annan, A.P. and others},
+	Journal = {Water Resour. Res},
+	Number = {3},
+	Pages = {574--582},
+	Title = {Electromagnetic determination of soil water content: Measurements in coaxial transmission lines},
+	Volume = {16},
+	Year = {1980}}
+
+\bibitem[{\textit{USDA}(2005)}]{USDA}
+USDA (2005), CALVEG zones and alliances: vegetation descriptions.  \url{http://www.fs.usda.gov/Internet/FSE_DOCUMENTS/fsbdev3_046448.pdf}
+
+
+@article{vinukollu2010global,
+	Author = {Vinukollu, R.K. and Wood, E.F. and Ferguson, C.R. and Fisher, J.B.},
+	Issn = {0034-4257},
+	Journal = {Remote Sensing of Environment},
+	Publisher = {Elsevier},
+	Title = {Global estimates of evapotranspiration for climate studies using multi-sensor remote sensing data: Evaluation of three process-based approaches},
+	Volume = {115},
+	Year = {2011}}
+
+
+@article{wang1995competitive,
+	Author = {Wang, Z.Q. and Newton, M. and Tappeiner, II and John, C.},
+	Journal = {Forest science},
+	Number = {4},
+	Pages = {744--757},
+	Publisher = {Society of American Foresters},
+	Title = {Competitive relations between {Douglas-fir} and {Pacific} madrone on shallow soils in a {Mediterranean} climate},
+	Volume = {41},
+	Year = {1995}}
+
+
+@article{waring2011generalizing,
+	Author = {Waring, RH and Landsberg, JJ},
+	Journal = {Journal of Plant Ecology},
+	Number = {1-2},
+	Pages = {101--113},
+	Publisher = {Oxford University Press},
+	Title = {Generalizing plant--water relations to landscapes},
+	Volume = {4},
+	Year = {2011}}
+
+
+@article{waring1978sapwood,
+	Author = {Waring, RH and Running, SW},
+	Journal = {Plant, Cell \& Environment},
+	Number = {2},
+	Pages = {131--140},
+	Publisher = {Wiley Online Library},
+	Title = {Sapwood water storage: its contribution to transpiration and effect upon water conductance through the stems of old-growth {Douglas-fir}},
+	Volume = {1},
+	Year = {1978}}
+
+
+@article{Warren:2007ly,
+	Author = {Warren, Jeffrey M. and Meinzer, Frederick C. and Brooks, J. Renee and Domec, Jean-Christophe and Coulombe, Rob},
+	Journal = {New Phytologist},
+	Number = {4},
+	Pages = {753--765},
+	Publisher = {BLACKWELL PUBLISHING},
+	Read = {1},
+	Times-Cited = {15},
+	Title = {Hydraulic redistribution of soil water in two old-growth coniferous forests: quantifying patterns and controls},
+	Volume = {173},
+	Year = {2007}}
+
+\bibitem[{Williams}]{Williams}
+Williams, C., M. Menne, and J. Lawrimore (2012), Modifications to Pairwise Homogeneity Adjustment software to address coding errors and improve run-time efficiency, NCDC Technical Report NCDC No. GHCNM-12-02, National Climatic Data Center, 28 pp.
+
+
+@article{wilson2002energy,
+	Author = {Wilson, Kell B and Baldocchi, Dennis D and Aubinet, Marc and Berbigier, Paul and Bernhofer, Christian and Dolman, Han and Falge, Eva and Field, Chris and Goldstein, Allen and Granier, Andre and others},
+	Journal = {Water Resources Research},
+	Number = {12},
+	Pages = {1294},
+	Publisher = {American Geophysical Union},
+	Title = {Energy partitioning between latent and sensible heat flux during the warm season at {FLUXNET} sites},
+	Volume = {38},
+	Year = {2002}}
+
+\bibitem[{\textit{Woudenberg}(2010)}]{Woudenberg}
+Woudenberg, S.~W., B.~L. Conkling, B.~M. O'Connell, E.~B. LaPoint, J.~A. Turner, and K.~L. Waddell (2010), The Forest Inventory and Analysis Database: Database description and users manual version 4.0 for Phase 2, Gen. Tech. Rep. RMRS-GTR- 245. Fort Collins, CO: U.S. Department of Agriculture, Forest Service, Rocky Mountain Research Station. 336 p.
+
+
+@article{wullschleger2001transpiration,
+	Author = {Wullschleger, Stan D and Hanson, PJ and Todd, DE},
+	Journal = {Forest Ecology and Management},
+	Number = {1},
+	Pages = {205--213},
+	Publisher = {Elsevier},
+	Title = {Transpiration from a multi-species deciduous forest as estimated by xylem sap flow techniques},
+	Volume = {143},
+	Year = {2001}}
+
+\bibitem[{\textit{Zwieniecki}(1995)}]{Zwieniecki}
+Zwieniecki, M.~A., and M. Newton (1995), Roots growing in rock fissures: Their morphological adaptation, 
+\textit{Plant and Soil}, \textit{172}, 181--187.
+
+\bibitem[{\textit{Zwieniecki}(1996)}]{Zwieniecki2}
+Zwieniecki, M.~A., and M. Newton (1996), Seasonal pattern of water depletion from soil--rock profiles in a Mediterranean climate in southwestern Oregon, 
+\textit{Can. J. For. Res.}, \textit{26}, 1346--1352.
+
+
+
 %%%%%%%% WIND CHAPTER %%%%%%%%
 
 @article{avissar1998evaluation,
