--- a/ch1-sapflow/discussion/discussion.tex
+++ b/ch1-sapflow/discussion/discussion.tex
@@ -1,7 +1,7 @@
 \section{Discussion}
 
 \subsection{Species difference in response to \textit{VPD} and $\theta$}
-Evergreen tree species that coexist on this small hillslope transpire maximally during different seasons.  This difference in transpiration seasonality is due to the species-specific sensitivities of transpiration to atmospheric evaporative demand and subsurface water supply.  Douglas-fir transpiration reaches near-maximum values on clear-sky days in the rainy spring when relative soil moisture exceeds a threshold of $\sim$0.3 even when \textit{VPD} is low (around 1 kPa), and Douglas-fir transpiration declines sharply with the low surface soil moisture conditions of the dry summer.  In contrast, Pacific madrone, live oak, bay, and tanoak transpiration increases continually with increasing \textit{VPD}, reaching maximal transpiration values when atmospheric evaporative demand is highest in the summer dry season; in addition, the low moisture in the upper 50 cm of soil in the summer dry season does not suppress Pacific madrone transpiration and suppresses the other broadleaf species to a lesser degree than it does Douglas-fir.  As a result, Douglas-firs have highest transpiration on clear days in spring, while broadleaf species, and especially Pacific madrones, have highest transpiration on summer days with high atmospheric demand (Figure 3).  \textbf{The Douglas-fir seasonal pattern is consistent with other studies [REFS]; we could not find any studies of Pacific madrone transpiration seasonal patterns.}
+Evergreen tree species that coexist on this small hillslope transpire maximally during different seasons.  This difference in transpiration seasonality is due to the species-specific sensitivities of transpiration to atmospheric evaporative demand and subsurface water supply.  Douglas-fir transpiration reaches near-maximum values on clear-sky days in the rainy spring when relative soil moisture exceeds a threshold of $\sim$0.3 even when \textit{VPD} is low (around 1 kPa), and Douglas-fir transpiration declines sharply with the low surface soil moisture conditions of the dry summer.  In contrast, Pacific madrone, live oak, bay, and tanoak transpiration increases continually with increasing \textit{VPD}, reaching maximal transpiration values when atmospheric evaporative demand is highest in the summer dry season; in addition, the low moisture in the upper 50 cm of soil in the summer dry season does not suppress Pacific madrone transpiration and suppresses the other broadleaf species to a lesser degree than it does Douglas-fir.  As a result, Douglas-firs have highest transpiration on clear days in spring, while broadleaf species, and especially Pacific madrones, have highest transpiration on summer days with high atmospheric demand (Figure 4).  The Douglas-fir seasonal pattern is consistent with other studies [\textit{Jassal et al.}, 2009; \textit{Moore et al.}, 2004; \textit{Granier}, 1987]; no studies of Pacific madrone transpiration seasonal patterns were found in the literature.
 
 Sensitivity to \textit{I} also differed between Douglas-firs and the broadleaf species: broadleaf transpiration showed a greater relative increase with increasing \textit{I} than did Douglas-fir transpiration. This species difference might arise in part because, although the parameters are estimated with open-field \textit{I}, trees of different heights on this north-facing slope actually have different access to \textit{I}. Large Douglas-firs (up to 50-60 m tall) generally have greater \textit{I} access than understorey broadleaf trees (20-30 m tall).  Thus, during low \textit{I} times such as mornings or winter days, the large Douglas-firs might have sufficient \textit{I} for photosynthesis and transpiration, while understorey trees might not.
 
@@ -13,36 +13,29 @@ We speculate that Pacific madrones may also have higher leaf area during the sum
 Interestingly, Douglas-fir trees at our site do not seem to use groundwater to alleviate water stress during the dry season.  Tree 5, a large Douglas-fir downslope where the water table is $\sim$5 m below ground year-round, declined at a similar rate to upslope Douglas-firs in the dry season (similar soil moisture parameters in Table A2).  Like the instrumented upslope Douglas-firs, tree 5 rebounded strongly with the onset of the rainy season, suggesting water limitation during the dry season until unsaturated zone moisture was replenished by rains.
 
 \subsection{Implications of Douglas-fir water stress}
-Douglas-firs' sap flow declined through the dry season in all three years, but the timing of onset of the decline varied between years, corresponding to the timing of moisture decline in the top 50 cm of soil (Figure 9).  The timing of surface soil moisture decline, in turn, seems to depend on the timing of late spring precipitation (Figure 2).  Excess rain during the winter and early spring that exceeds the storage capacity of the soil will run off and have little influence on summer soil moisture availability, but rain in the late spring has the potential to refill a partially empty upper soil reservoir and sustain soil moisture further into the dry season.  Thus, the timing of late spring precipitation is important for sustaining Douglas-fir transpiration through the dry season.  As long as late spring storms meet a certain threshold quantity, their timing may matter more than total wet season precipitation for Douglas-fir function in the dry season.
+Douglas-firs' sap flow declined through the dry season in all three years, but the timing of onset of the decline varied between years, corresponding to the timing of moisture decline in the top 50 cm of soil (Figure 9).  The timing of surface soil moisture decline, in turn, seems to depend on the timing of late spring precipitation (Figure 3).  Excess rain during the winter and early spring that exceeds the storage capacity of the soil will run off and have little influence on summer soil moisture availability, but rain in the late spring has the potential to refill a partially empty upper soil reservoir and sustain soil moisture further into the dry season.  Thus, the timing of late spring precipitation is important for sustaining Douglas-fir transpiration through the dry season.  As long as late spring storms meet a certain threshold quantity, their timing may matter more than total wet season precipitation for Douglas-fir function in the dry season.
 
-Douglas-firs may be encroaching on areas formerly dominated by Pacific madrone and other broadleafs in the ACRR, due to a fire-regime shift from controlled burning by indigenous people and early European settlers, to fire suppression in the 20th century [\textit{Johnson}, 1979].  If Douglas-firs become more prevalent, their suppressed transpiration in the dry season could decrease the regional summertime evapotranspiration (Figure 10) and might increase the land surface temperature in the dry season [\textbf{REFERENCES}].  California Coast Range forests with a greater proportion of Douglas fir might also be less resilient to drought, if the Douglas-firs' decline in stomatal conductance reduced whole-tree carbon balance and thus increased sensitivity to subsequent drought events [\textit{McDowell et al.}, 2008].
+Douglas-firs may be encroaching on areas formerly dominated by Pacific madrone and other broadleafs in the ACRR, due to a fire-regime shift from controlled burning by indigenous people and early European settlers, to fire suppression in the 20th century [\textit{Johnson}, 1979].  If Douglas-firs become more prevalent, their suppressed transpiration in the dry season could decrease the regional summertime evapotranspiration (Figure 10) and might increase the land surface temperature in the dry season [\textit{Link et al.}, in preparation].  California Coast Range forests with a greater proportion of Douglas fir might also be less resilient to drought, if the Douglas-firs' decline in stomatal conductance reduced whole-tree carbon balance and thus increased sensitivity to subsequent drought events [\textit{McDowell et al.}, 2008].
 
-\subsection{Comparison of sap velocities with previous observations}
-\textbf{our sap flow measurements are in line with velocities measured by REFS, with Douglas-fir sap velocities ranging from XX-XX, oak sap velocities ranging from XX-XX}
-
-\subsection{Comparison of regional transpiration estimates with remotely sensed and water balance estimates}
+\subsection{Comparison with previous observations}
 Our bottom-up estimate of transpiration agrees generally with the MODIS-derived top-down estimates at the scale of the Eel River watershed (Figure 10).  However, there are important differences in the dry season: we estimate notably lower transpiration in August and September than does the MODIS remote sensing method (Figure 11).  It is unlikely that the difference could be due to soil evaporation unaccounted for in the sap flow method, because surface soils are very dry in the late dry season.  It is possible that other conifer species in the watershed, such as redwood and pine species, have less stomatal closure than Douglas-fir at low soil moisture values, and that our method underestimates transpiration by these other species.  However, \textit{Pinaceae} tend to use water conservatively because they are vulnerable to embolism [\textit{Mart\'inez-Vilalta et al.}, 2004], suggesting that pine species in this region, which make up much of the ``other conifer'' category in Figure 4, would be likely to close their stomata under dry soil conditions like Douglas-firs do.  It is also possible that the FIA inventory underestimates the contribution of broadleaf species like Pacific madrone that transpire heavily in the dry season.  Certainly, broadleaf evergreens dominate transpiration locally on certain hillslopes: the species distribution is highly spatially patterned in the Elder Creek and Eel River watersheds, with broadleaf evergreen trees predominant on south-facing slopes and ridges, and Douglas-firs predominant on north-facing slopes and in valleys [Collin Bode and William Dietrich, personal communication].  As such, south-facing slopes may have higher dry season transpiration than north-facing slopes, creating structured spatial variability in dry season transpiration.  Finally, the MODIS algorithm, which uses remotely sensed LAI and reanalysis meteorology to drive a Penman-Monteith model [\textit{Mu et al.}, 2007], may not accurately account for Douglas-fir stomatal closure when soils are dry, because the MODIS algorithm does not incorporate soil moisture information.  Comparison with ET measured by flux towers suggests that the MODIS-derived annual cycle of ET for Mediterranean sites contains large errors [\textit{Vinukollu et al.}, 2011; one flux tower located in the Sierra Nevada foothills oak savanna and one on the western slope of the Sierra Nevada in a mixed-evergreen coniferous forest].
 
-\textbf{BRIEF DISCUSSION OF AGREEMENT WITH DANIELLA'S WATER BALANCE ET ESTIMATE}
+We note that our estimates also agree with measurements of similar sites made with a variety of methods.  \textit{Salve et al.} [2012] used a water balance to calculate an annual ET at Rivendell (excluding interception losses) of 300-500 mm and summer (June-September) ET  of up to 200 mm.  Our estimate using the realistic species distribution and the first radial velocity profile (blue line in Figure 10, top row) gives annual transpiration of 350-410 mm and June-September transpiration of 150-180 mm.  At a wetter Douglas-fir site in British Columbia using the eddy flux method, \textit{Jassal et al.} [2009] measured similar spring and early summer monthly ET (50-70 mm/month), although late summer ET was greater at the wetter British Columbia site than at Rivendell.  At a Douglas-fir site in western Oregon, \textit{Moore et al.} [2004] used sap flow scaling to estimate Douglas-fir dry season transpiration of 0.5-2.5 mm/day, depending on tree age and time within the dry season; these rates bracket our dry season estimates (top left panel of Figure 10.)  In addition, measurements of oak transpiration at a Mediterranean site agree with the oak sap velocities we measured (\textit{Fisher et al.} [2007] measured peak sap velocities around 6 cm/hr) and the transpiration rates we estimate (\textit{Chen et al.} [2008] report oak tree transpiration of 2-4 mm/day in early- to mid-summer.)
 
 \subsection{Uncertainties and limitations}
 
 \subsubsection{Soil moisture}
-\textbf{put in a segue...}
-Ideally, the average would be weighted by root density [\textit{Chen et al.}, 2008], but root density has not been measured systematically.  A spatial pattern in $\theta$ has been observed at this site, with downslope profiles maintaining higher moisture content longer into the dry season [\textit{Salve et al.}, 2012].  However, we choose to compare sap flow to a single, site-averaged value of soil moisture for two reasons: (1) a moisture content--matric potential calibration has not been performed, and the variation of material properties along the slope means that the spatial pattern of moisture content might not directly translate to a spatial pattern of matric potential; (2) the location of roots is uncertain, especially for large trees, which, on this steep slope, have root systems extending great lateral distances and deeply into the hillside, and it is thus difficult to constrain where trees are accessing water.  Thus, we use a single averaged relative $\theta$ as an index of water availability, with the recognition that it imperfectly represents the water available to each individual tree.
+In this study, we aggregate measurements of soil moisture from across the hillslope into a single site average.  A spatial pattern in $\theta$ has been observed at this site, with downslope profiles maintaining higher moisture content longer into the dry season [\textit{Salve et al.}, 2012].  However, we choose to compare sap flow to a single, site-averaged value of soil moisture for two reasons: (1) a moisture content--matric potential calibration has not been performed, and the variation of material properties along the slope means that the spatial pattern of moisture content might not directly translate to a spatial pattern of matric potential; (2) the location of roots is uncertain, especially for large trees, which, on this steep slope, have root systems extending great lateral distances and deeply into the hillside, and it is thus difficult to constrain where trees are accessing water (i.e., we cannot weight our average by root density [\textit{Chen et al.}, 2008]).  Thus, we use a single averaged relative $\theta$ as an index of water availability, with the recognition that it imperfectly represents the water available to each individual tree.
 
 The TDR measurements of the top 50 to 70 cm do not measure the water content of the saprolite zone between 1 and 3 m below the surface, which may be an important reservoir of plant-available moisture [\textit{Salve et al.}, 2012].  Unfortunately, the measurements used by \textit{Salve et al.} [2012] to explore the saprolite moisture dynamics are not suited to our analyses in this study because of as-yet-undetermined calibration to moisture content (ERSAS) or low temporal resolution (neutron probe).  We compare tree water use to surface (top 50 to 70 cm) soil moisture because it is readily measured at present; as techniques for quantifying moisture in saprolite and weathered rock advance, tree water use should be compared to those observations as well.
 
-\subsubsection{Xylem water content}
-Xylem water content, especially in Douglas-fir [\textit{Waring and Running}, 1978], may decline during long dry periods.  Our water content measurements were made at the end of the dry season and were thus probably a lower bound.  According to Equation 7 in \textit{Burgess et al.} [2001], an underestimation of water content in the wet season would result in an underestimation of sap velocity during the wet season.  \textbf{Merge this with the section below??}
-
 \subsubsection{Sap velocity vs. transpiration}
-There are uncertainties associated with treating sap velocity as proportional to transpiration.  This assumes that (1) the radial profile of sap velocity in the sapwood is constant in time, and (2) the change in storage between the measurement point and the leaves is small.  The first assumption is a reasonable [\textit{Cohen et al.}, 1985; \textit{Nadezhdina et al.}, 2002; \textit{Dragoni et al.}, 2009] but not perfect [\textit{Ford et al.}, 2004] approximation.  The second assumption introduces more error at sub-diurnal timescales, when storage changes and temporal lags in velocity between stem and leaf can be significant [e.g. \textit{Waring and Running}, 1978; \textit{Buckley et al.}, 2011], but in the daily integral, the storage change is less than 5\% in Douglas-fir [\textit{Waring and Running}, 1978]; the daily storage change in other species varies but also tends to be small (negligible in \textit{Larix} and \textit{Picea} [\textit{Schulze et al.}, 1985], and up to 3\% in \textit{Juglans regia} [\textit{Constantz and Murphy}, 1990]).  We neglect this storage contribution to transpiration for simplicity.
+In treating sap velocity as proportional to transpiration, we assume that (1) the radial profile of sap velocity in the sapwood is constant in time, and (2) the change in storage between the measurement point and the leaves is small.  The first assumption is a reasonable [\textit{Cohen et al.}, 1985; \textit{Nadezhdina et al.}, 2002; \textit{Dragoni et al.}, 2009] but not perfect [\textit{Ford et al.}, 2004] approximation.  The second assumption introduces more error at sub-diurnal timescales, when storage changes and temporal lags in velocity between stem and leaf can be significant [e.g. \textit{Waring and Running}, 1978; \textit{Buckley et al.}, 2011], but in the daily integral, the storage change is less than 5\% in Douglas-fir [\textit{Waring and Running}, 1978]; the daily storage change in other species varies but also tends to be small (negligible in \textit{Larix} and \textit{Picea} [\textit{Schulze et al.}, 1985], and up to 3\% in \textit{Juglans regia} [\textit{Constantz and Murphy}, 1990]).  We neglect this storage contribution to transpiration for simplicity.
 
-\subsubsection{MODIS uncertainties}
-Species categorization: This coarse categorization could and should be improved if additional conifer species are instrumented in the future.
-Scaling issues - what dynamics is small-scale-based estimate missing?  What needs to be done to improve the estimates?
-Sapwood scaling - sapwood-DBH relationship varies by species, tree size and age, and environmental conditions like drought.  Transpiration estimates are sensitive to errors in sapwood thickness [\textbf{IS THERE A REF FOR THIS?}]. More cores/observations would better constrain this relationship and reduce uncertainty arising from sapwood thickness estimates.
-Also radial velocity profiles.
-State that sapwood thickness and radial velocity profile errors should not change the seasonality, only the overall magnitude.
+Similarly, in converting heat pulse velocity to sap velocity, we treat xylem water content as constant through the year, but xylem water content, especially in Douglas-fir [\textit{Waring and Running}, 1978], may decline during long dry periods.  Our water content measurements were made at the end of the dry season and were thus probably a lower bound.  According to Equation 7 in \textit{Burgess et al.} [2001], an underestimation of water content in the wet season would result in an underestimation of sap velocity during the wet season.
+
+\subsubsection{Regional estimate of transpiration}
+We have estimated regional transpiration in order to demonstrate the potential for species differences in response to $VPD$ and $\theta$ to influence transpiration at a regional scale.  The estimate required several simplifying assumptions.  First, species recorded in the FIA dataset were grouped into broad categories of needleleaf and broadleaf, both in order to estimate the maximum potential impact of Pacific-madrone-like behavior in broadleafs and also to accommodate species not measured at the Rivendell site.  This coarse categorization could and should be improved if additional species (especially the common conifers) are instrumented in the future.  Second, the sapwood thickness - DBH relationship is poorly constrained for species other than Douglas-fir (our Pacific madrone relationship was based on only 6 samples, and samples were not collected from other broadleaf species at the site because the hardness of the wood made it prohibitively difficult with the available equipment).  This allometric relationship is expected to vary between sites, species, and trees of different ages [\textit{Eamus et al.}, 2006, p. 42]; as such, this relationship is a significant source of uncertainty in our regional estimate.  Similarly, the radial profile of sap velocity is another significant source of uncertainty, and we attempt to quantify this uncertainty by producing three regional estimates, using three reasonable radial velocity profiles (Figure 10.)  However, any errors due to sapwood thickness and radial velocity profile would not change the seasonality of the transpiration estimates, only the magnitude.
+
+Finally, in using small-scale measurements to estimate the behavior of trees at the regional scale, we neglect heterogeneity among hillslopes.  Our regional estimate does not account for heterogeneous meteorology and water availability, or for variation in response between trees in different locations due to, for instance, genetics, climate during growth, or age distribution.  More sap flow and micrometeorological measurements at different sites within the Eel River watershed, as well remotely sensed observations of vegetation, could integrate such heterogeneity and improve the accuracy of the regional estimate.
 
